--- a/src/component/Team.css
+++ b/src/component/Team.css
@@ -1,15 +1,15 @@
-.about {
+.team {
     margin: 80px auto;
 }
 
-.about h2 {
+.team h2 {
     font-weight: bold;
     margin-bottom: 20px;
     padding-bottom: 20px;
     position: relative;
 }
 
-.about h2::after {
+.team h2::after {
     content: '';
     position: absolute;
     display: block;
@@ -18,18 +18,4 @@
     background: #81c042;
     bottom: 0;
     left: calc(50% - 25px);
-}
-
-.about .bi {
-    color: #81c042;
-    border: .1px solid #81c04270;
-    padding: 10px;
-    border-radius: 10px;
-    transition: 0.5s;
-}
-
-.about .bi:hover {
-    background: #81c042;
-    color: #fff;
-    border: 0;
 }
