--- a/src/component/Home.css
+++ b/src/component/Home.css
@@ -1,7 +1,7 @@
 .home {
     background: linear-gradient(
     to bottom
-    ,rgb(255,255,255,.1),rgba(255, 255, 255, .8)),url('../images/b1.jpg');
+    ,rgb(255,255,255,.1),rgba(255, 255, 255, .8)),url('../assets/images/b1.jpg');
     background-repeat: no-repeat;
     background-position-y: top ;
     background-position-x: center;
